--- a/index.html
+++ b/index.html
@@ -1,120 +1,19 @@
 <!DOCTYPE html>
-<html lang="en-US">
-  <head>
-  <link rel="icon" href="https://www.dropbox.com/s/b1qj1khuonxwos7/favicon.ico?dl=0" sizes="16x16" type="image/png">
-<meta charset="utf-8">
-  <title>Noah Peters</title>
-  <link rel="stylesheet" href="https://dl.dropbox.com/s/xt33j36c367ddhx/Mycss.css?dl=0">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	  <style>
+<html>
+<head>
+<style>
+body  {
+    background-image: url("https://cdn.discordapp.com/attachments/490998645093826571/491412550177783818/image0.jpg");
+    background-color: #cccccc;
+}
 </style>
-	</head>
-<body data-gr-c-s-loaded="true" onload="myFunction()" style="margin:0;">
-    <!-- Header -->
-<div id="loader"></div>
-    <div style="display:none;" id="myDiv" class="animate-bottom">
-    <header class="primary-header container group">
+</head>
+<body>
 
-      <h1 class="logo">
-        <a href="index.html">Noah's<br>Home page</a>
-      </h1>
+<h1 align="center">Choppy Does Good Sucky Sucky</h1>
 
-      <h3 class="tagline">"They have blast glass!" - Tylerolson1 2017</h3>
+<p align="center">$3.99 per month</p>
+<iframe width="1" height="1" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/121699509&color=%23771414&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 
-      <nav class="nav primary-nav">
-        <a href="index.html">Home</a>
-		<br>
-		<a href="about-noah.html">About-Noah</a>
-		<br>
-		<a href="siteinfo.html">Contact-Me</a>
-	  </nav>
-
-    </header>
-
-    <!-- Hero -->
-
-    <section class="hero container">
-
-      <h2>I got bored in school and coded this website...</h2>
-
-      <p></p>
-
-      <a class="btn btn-alt" href="about-noah.html">Learn more about Noah</a>
-
-    </section>
-
-    <!-- Teasers -->
-
-    <section class="row-alt row">
-		<div class="grid">
-      <!-- Speakers -->
-
-      <section class="teaser col-1-3">
-        <a href="https://www.youtube.com/channel/UC9RvWBj8KmEpkUcmlMAxvVA">
-          <h5>Links</h5>
-          <h3>YouTube</h3>
-        </a>
-        <p>Click on the text above to vist my YouTube channel</p>
-      </section><!--
-
-      Schedule
-
-      --><section class="teaser col-1-3">
-        <a href="about-noah.html">
-          <h5>About Noah</h5>
-          <h3>More about me</h3>
-        </a>
-        <p>This site was built by Noah Peters. <br> Noah has five years of programming experience.<br> <a href="mailto:noaheanpeters@gmail.com"> Contact Noah </a></p>
-      </section><!--
-
-      Venue
-
-      --><section class="teaser col-1-3">
-        <a href="siteinfo.html">
-          <h5>Contact me or ask questions</h5>
-          <h3>Click here to vist our contact page</h3>
-        </a>
-        <p>Here you can vist our contact page.</p>
-      </section>
-	  </div>
-    </section>
-
-    <!-- Footer -->
-
-    <footer class="primary-footer container group">
-
-        <small>© 2018 <a href="https://ucstudios.weebly.com/">U.C Studios</a> </small>
-	<br>
-	<small> Design by Noah Peters. Based off of Shay Howe's design</small>
-         <br>
-       <small> <ul class="social-icons">
-        <li><a href="https://www.facebook.com/profile.php?id=100008338816705" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-        <li><a href="https://www.instagram.com/arkofthegods/" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
-            </ul></small>
-
-
-
-      <nav class="nav">
-           <a href="index.html">Home</a>
-        <a href="about-noah.html">About-Noah</a>
-		<a href="siteinfo.html">Contact-Me</a>
-      </nav>
-
-    </footer>
-    </div>
-<script>
-var myVar;
-
-function myFunction() {
-    myVar = setTimeout(showPage, 3000);
-}
-
-function showPage() {
-  document.getElementById("loader").style.display = "none";
-  document.getElementById("myDiv").style.display = "block";
-}
-</script>
-  
 </body>
 </html>
