--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     </style>
     <head>
     <body>
-        <img href = "https://www.dropbox.com/s/fjsomji15bnzct4/icon.png?dl=0">
+        <img scr = "https://www.dropbox.com/s/fjsomji15bnzct4/icon.png?dl=0">
     <h1>Click on the link to view the files in .txt form</h1>
 <a href = "https://github.com/Halotacos/Halotacos.github.io/tree/master/files">Click me</a>
